--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CI/CD Pipeline Demo test</title>
+  <title>CI/CD Pipeline Demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,7 @@
       <input type="color" id="color-picker" class="form-control form-control-color" value="#f8f9fa" title="Choose theme color">
       <button id="reset-color-btn" class="btn btn-sm btn-outline-secondary mt-2">Reset Color</button>
     </div>
-    <h1 class="mt-5">Welcome to the CI/CD Pipeline Demo</h1>
+    <h1 class="mt-5">Welcome to the CI/CD Pipeline Demo Test</h1>
     <p class="lead">This is a simple landing page served from a Node.js application.</p>
     <p class="pipeline-status">Complete CI/CD Pipeline: Dev → Test → Vercel ✅</p>
 
